--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <title>Franco</title>
 
     <!-- link header -->
+    <script defer src="./scripts/cms.js"></script>
+
     <link rel="stylesheet" href="./componentes/header/header.css" />
     <script defer src="./componentes/header/header.js"></script>
 
+    <link rel="stylesheet" href="./componentes/form/form.css" />
+    <script defer src="./componentes/form/form.js"></script>
+
+    <link rel="stylesheet" href="./componentes/footer/footer.css" />
+    <script defer src="./componentes/footer/footer.js"></script>
+
     <link rel="stylesheet" href="./styles/index.css" />
     <script defer src="./scripts/index.js"></script>
-
-    <script src="./scripts/cms.js"></script>
   </head>
+
   <body>
     <header class="header"></header>
 
@@ -42,17 +49,21 @@
         <h2 class="services__title">Mis servicios</h2>
         <div class="services__template-content">
           <!-- aca voy a poner el template cards, por eso no tiene nada -->
-          <template id="services__template">
-            <div class="services__card">
-              <img src="" alt="" class="services__img" />
-              <div class="portfolio__card-info">
-                <h3 class="portfolio__card-title"></h3>
-                <p class="portfolio__card-parrafo"></p>
-              </div>
-            </div>
-          </template>
         </div>
+        <template id="services__template">
+          <div class="services__card">
+            <img src="" alt="" class="services__img" />
+            <div class="services__card-info">
+              <h3 class="services__card-title"></h3>
+              <p class="services__card-parrafo"></p>
+            </div>
+          </div>
+        </template>
       </div>
     </section>
+
+    <section class="form"></section>
+
+    <section class="footer"></section>
   </body>
 </html>
